
  rm -f /read-only-fs/nonexistent now succeeds and prints no diagnostic
  on systems with an unlinkat syscall that sets errno to EROFS in that case.
  Before, it would fail with a "Read-only file system" diagnostic.
  Also, "rm /read-only-fs/nonexistent" now reports "file not found" rather
  than the less precise "Read-only file system" error.

** New features

  env and printenv now accept the option --null (-0), as a means to
  avoid ambiguity with newlines embedded in the environment.

  md5sum --check now also accepts openssl-style checksums.
  So do sha1sum, sha224sum, sha384sum and sha512sum.

  mktemp now accepts the option --suffix to provide a known suffix
  after the substitution in the template.  Additionally, uses such as
  "mktemp fileXXXXXX.txt" are able to infer an appropriate --suffix.

  touch now accepts the option --no-dereference (-h), as a means to
  change symlink timestamps on platforms with enough support.


* Noteworthy changes in release 8.0 (2009-10-06) [beta]

** Bug fixes

  cp --preserve=xattr and --archive now preserve extended attributes even
  when the source file doesn't have write access.
  [bug introduced in coreutils-7.1]

  touch -t [[CC]YY]MMDDhhmm[.ss] now accepts a timestamp string ending in .60,
  to accommodate leap seconds.
  [the bug dates back to the initial implementation]

  ls --color now reverts to the color of a base file type consistently
  when the color of a more specific type is disabled.
  [bug introduced in coreutils-5.90]

  ls -LR exits with status 2, not 0, when it encounters a cycle

  ls -is is now consistent with ls -lis in ignoring values returned
  from a failed stat/lstat.  For example ls -Lis now prints "?", not "0",
  for the inode number and allocated size of a dereferenced dangling symlink.

  tail --follow --pid now avoids a race condition where data written
  just before the process dies might not have been output by tail.