@@ -48,6 +48,7 @@ mv.1
 nice.1
 nl.1
 nohup.1
+nproc.1
 od.1
 paste.1
 pathchk.1
