@@ -56,6 +56,7 @@ mv
 nice
 nl
 nohup
+nproc
 od
 paste
 pathchk
